--- a/mesos-master/Dockerfile
+++ b/mesos-master/Dockerfile
@@ -1,12 +1,5 @@
-FROM mesos
-MAINTAINER  Igor Moochnick <igor@igorshare.com>
+FROM mesos_base
+MAINTAINER Igor Moochnick <igor@igorshare.com>
 
-#EXPOSE 5050
-
-##### For Marathon and Chronos:
-RUN echo "zk://zookeeper:2181/mesos" > /etc/mesos/zk
-
-# Configure process supervisor
-ADD supervisord.conf /etc/supervisor/supervisord.conf
-
-CMD ["supervisord", "-c", "/etc/supervisor/supervisord.conf"]
+EXPOSE 5050
+CMD ["mesos-master"]
